--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -87,6 +87,7 @@
                 @include media('<=mobile_menu') {
                     text-align: center;
                     margin-top: 1em;
+                    width: 100%;
                 }
                 
                 &:hover,
@@ -122,13 +123,24 @@
 		@include button-reset;
 		position: absolute;
 		line-height: 0;
-		top: 50%;
-		transform: translateY(-45%);
-		right: 9px;
+		top: 5px;
+        right: 0;
+		transform: none;
+		@include icon-position( 44px );
 
-		// svg {
-		// 	fill: $base-color; // to fill the icon
-		// }
+        svg {
+            @include icon-position( 14px );
+            // 	fill: $base-color; // to fill the icon
+        }
+
+        &.expanded {
+            transform: rotate(180deg);
+
+            & + .sub-menu {
+                display: block;
+            }
+        }
+
 	}
 
 	.nav-secondary {
@@ -236,12 +248,11 @@
 	@include media("<=mobile_menu") {
         position: fixed;
         width: 100%;
-        max-width: 320px;
+        max-width: 325px;
         height: 100%;
         top: 0;
         right: -100%;
         background: $white;
-        // border-top: 1px solid $border-color;
         transition: all .3s ease-in-out;
         padding: 105px $grid-gap 0;
         overflow: auto;
@@ -255,29 +266,6 @@
 		.menu > .menu-item > a {
 			padding: 11px 18px;
             font-size: 18px;
-		}
-
-		.submenu-expand {
-			top: 0;
-			right: 0;
-			transform: none;
-			@include icon-position( 44px );
-
-			svg {
-				@include icon-position( 14px );
-			}
-
-			// &:not(.expanded) {
-			// 	transform: rotate(180deg);
-			// }
-
-			&.expanded {
-				transform: rotate(180deg);
-
-				& + .sub-menu {
-					display: block;
-				}
-			}
 		}
 
 		.sub-menu {
